--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <section class="main-content">
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
+<img src="https://github.com/Cotton5103/mahouzin/blob/gh-pages/octcat_purin.png?raw=true" width="300" height="300" />
+<img src="https://github.com/Cotton5103/mahouzin/blob/gh-pages/mahouzin.png?raw=true" width="300" height="300" />
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
 <h3>
